kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neenakost
spec:
  selector:
    app: neenakost
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
